crates/service/tests/diagnostics/snapshots/features__diagnostics__omitted_idx_in_instr__memory_copy.snap
---
source: crates/service/tests/diagnostics/omitted_idx_in_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 15
        }
      },
      "severity": 1,
      "code": "omitted-idx-in-instr",
      "source": "wat",
      "message": "explicit memory idx for `memory.copy` is required"
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 4
        },
        "end": {
          "line": 12,
          "character": 15
        }
      },
      "severity": 1,
      "code": "omitted-idx-in-instr",
      "source": "wat",
      "message": "explicit memory idx for `memory.copy` is required"
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 4
        },
        "end": {
          "line": 12,
          "character": 15
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "missing identifier or unsigned integer"
    }
  ]
}
