crates/service/tests/diagnostics/snapshots/features__diagnostics__omitted_idx_in_instr__memory_init.snap
---
source: crates/service/tests/diagnostics/omitted_idx_in_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 8,
          "character": 4
        },
        "end": {
          "line": 8,
          "character": 15
        }
      },
      "severity": 1,
      "code": "omitted-idx-in-instr",
      "source": "wat",
      "message": "explicit memory idx for `memory.init` is required"
    }
  ]
}
